# jarvis-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: backend-ci.yml
app/: brain.py  intents.json  main.py
app/core/: config.py
app/routers/: chat.py
app/schemas/: chat.py
app/service/: brain_service.py
models/: chat_model.h5  label_encoder.pkl  tokenizer.pkl
