[project]
name = "jarvis-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.6",
    "numpy>=2.4.2",
    "pydentic>=0.0.1.dev3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "uvicorn>=0.40.0",
]
